<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.slash.fixit_2.LoginAndSignupPkg.Signup"
    android:background="@drawable/blue_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/c_lname"
                android:hint="@string/last_name2"
                android:ems="10"
                android:textColorHint="#444444"
                android:textColor="#111111"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:layout_below="@+id/c_fname"
                tools:ignore="Deprecated"
                android:background="@drawable/edit_text_background"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/c_contactnumber"
                android:inputType="number"
                android:hint="Contact Number"
                android:ems="10"
                android:textColorHint="#444444"
                android:textColor="#111111"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:layout_below="@+id/c_lname"
                tools:ignore="Deprecated,HardcodedText,TextFields"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:id="@+id/c_confirmpassword"
                android:hint="@string/confirm_password"
                android:ems="10"
                android:textColorHint="#444444"
                android:textColor="#111111"
                android:singleLine="true"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/c_password"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                tools:ignore="Deprecated"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:id="@+id/c_password"
                android:hint="@string/password2"
                android:ems="10"
                android:textColorHint="#444444"
                android:textColor="#111111"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:layout_below="@+id/c_username"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                tools:ignore="Deprecated"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/c_email"
                android:hint="Email"
                android:ems="10"
                android:textColorHint="#444444"
                android:textColor="#111111"
                android:singleLine="true"
                tools:ignore="Deprecated,HardcodedText,TextFields"
                android:layout_below="@+id/c_contactnumber"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/c_username"
                android:hint="@string/user_name2"
                android:ems="10"
                android:textColorHint="#444444"
                android:textColor="#111111"
                android:singleLine="true"
                android:layout_below="@+id/c_email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                tools:ignore="Deprecated"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/c_fname"
                android:hint="@string/first_name"
                android:ems="10"
                android:singleLine="true"
                android:textColorHint="#444444"
                android:textColor="#111111"
                android:layout_marginTop="130dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/edit_text_background"/>

            <Button
                android:text="@string/signup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#111111"
                android:id="@+id/signupbtn"
                android:onClick="signupClient"
                android:background="@drawable/background_login"
                android:backgroundTint="#ddffffff"
                android:layout_below="@+id/c_confirmpassword"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="40dp"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:id="@+id/logo4"
                />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
